# bevy_frame_count_log_prefix

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/example/: Cargo.toml
examples/example/src/: main.rs
src/: cache_system.rs  config.rs  fixed_update_count.rs  formatter.rs  lib.rs  plugin.rs  prelude.rs  statics.rs  subscriber.rs  subscriber_layer.rs
tests/: custom.rs  manual.rs  normal.rs
