workspace = { members = ["examples/example"] }
[package]
name = "bevy_frame_count_subscriber"
version = "0.1.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
tracing-log = "0.2"
tracing = "0.1"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "519ed5de42c9d872299a9b8b01933e052bf55595"
default-features = false
