[package]
name = "bevy_frame_count_log_prefix"
version = "0.0.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
tracing-log = "0.2"
tracing = "0.1"

[dependencies.bevy_app]
version = "0.16"
default-features = false

[dependencies.bevy_log]
version = "0.16"
default-features = false

[dependencies.bevy_diagnostic]
version = "0.16"
default-features = false

[dependencies.bevy_ecs]
version = "0.16"
default-features = false

[dev-dependencies.bevy]
version = "0.16"
default-features = false
features = ["bevy_log"]
